--- a/about.html
+++ b/about.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="AEC Library is a comprehensive library management system">
+  <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
     content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
   <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
   <link rel="icon" href="./assets/logos/finalLogo.webp" type="image/x-icon" />
   <title>About | AEC Library</title>
 
@@ -117,7 +117,7 @@
     
     <div class="py-3 mx-md-5 mx-3 ">
       <p>
-        Designed for both large and small library systems, AEC Library is a
+        Designed for both large and small library systems, NIET Library is a
         comprehensive library management system. For managing circulation
         and stock, this is ideal for institutional, public, and digital
         libraries. In order to manage and automate the processing of even
@@ -130,7 +130,7 @@
   </div>
     <div class="first">
       <h2 class="text-white">
-        <strong>Why use AEC Library?</strong>
+        <strong>Why use NIET Library?</strong>
       </h2>
       <p>
         Through AEC Library, the distribution process is controlled and
