--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <meta name="language" content="English">
   <meta name="author" content="NIET LIBRARY">
   <link rel="icon" href="./assets/logos/finalLogo.webp" type="image/x-icon" />
-  <title>About | AEC Library</title>
+  <title>About | NIET Library</title>
 
   <!-- Bootstrap CSS webp-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
