--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="theme-color" content="#f2f2f2">
   <meta name="msapplication-navbutton-color" content="#f2f2f2">
   <meta name="apple-mobile-web-app-status-bar-style" content="#f2f2f2">
-  <meta name="og:title" content="AEC Library is a comprehensive library management system">
+  <meta name="og:title" content="NIET Library is a comprehensive library management system">
   <meta name="og:description"
-    content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
 
   <meta property="og:image" content="assets/logos/finalLogo.webp">
   <meta name="og:type" content="library">
@@ -16,17 +16,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AEC Library</title>
+  <title>NIET Library</title>
 
   <link rel="icon" href="assets/logos/finalLogo.webp" type="image/x-icon">
 
-  <meta name="title" content="AEC Library is a comprehensive library management system">
+  <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+  <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <!-- <meta http-equiv="Content-Type" content="text/html" charset="utf-8"> -->
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
 
 
   <!-- Bootstrap CSS -->
@@ -160,7 +160,7 @@
   <header class="header stickon">
     <ul class="lsize">
       <li class="logo"><a class="nav-link" href="index.html" onclick="return false;"><img
-            src="assets/logos/finalLogo.webp" alt="AEC Library" class="logo-img"> AEC LIBRARY</a></li>
+            src="assets/logos/finalLogo.webp" alt="NIET Library" class="logo-img"> NIET LIBRARY</a></li>
       <li class="login"><a href="./Login_page/login_page.html" class="nav-link"><i class="fas fa-sign-in-alt"></i> LOGIN
         </a></li>
     </ul>
@@ -825,7 +825,7 @@
 
     <div class="faq-two" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What is the best part of AEC Library?</h3>
+      <h3 class="faq-page">Q: What is the best part of NIET Library?</h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>The best part about the website is that you can also contribute to the website for others to use the
@@ -882,7 +882,7 @@
       <div class="faq-body">
         <p>
         <ol>
-          <li>Contribute to Aec-library :
+          <li>Contribute to NIET-library :
             Aec-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
             and blogs.
           </li>
@@ -958,9 +958,9 @@
       <li><a href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank"> Linkedin</a></li>
 
 
-      <li><a href="https://github.com/SauravMukherjee44" target="github">Github</a></li>
-      <li><a href="https://twitter.com/mesourav44" target="twitter"> Twitter</a></li>
-      <li><a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw" target="YouTube">YouTube</a></li>
+      <li><a href="https://github.com/anshsingh7755" target="github">Github</a></li>
+      <li><a href="https://twitter.com/singhansh7755" target="twitter"> Twitter</a></li>
+      
     </ul>
     <ul>
       <li class="heading">Community</li>
@@ -1045,23 +1045,18 @@
         <div class="icons">
           <ul>
             <li>
-              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/sauravmukherjee44/" aria-label="Follow us on Linkedin" rel="noopener noreferrer">
+              <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/anshsingh7755/" aria-label="Follow us on Linkedin" rel="noopener noreferrer">
                 <i class="fab fa-linkedin-in icon"></i>
               </a>
             </li>
             <li>
-              <a title="GitHub" target="_blank" href="https://github.com/SauravMukherjee44/" aria-label= "Follow us on Github" rel="noopener noreferrer">
+              <a title="GitHub" target="_blank" href="https://github.com/anshsingh7755/" aria-label= "Follow us on Github" rel="noopener noreferrer">
                 <i class="fab fa-github icon"></i>
               </a>
             </li>
             <li>
-              <a title="Twitter" target="_blank" href="https://twitter.com/mesourav44/" aria-label= "Follow us on Twitter" rel="noopener noreferrer">
+              <a title="Twitter" target="_blank" href="https://twitter.com/singhansh7755/" aria-label= "Follow us on Twitter" rel="noopener noreferrer">
                 <i class="fab fa-twitter icon"></i>
-              </a>
-            </li>
-            <li>
-              <a title="YouTube" target="_blank" href="https://bit.ly/CodeINYouTube" aria-label= "Follow us on Youtube" rel="noopener noreferrer">
-                <i class="fab fa-youtube icon"></i>
               </a>
             </li>
           </ul>
