--- a/contributors.html
+++ b/contributors.html
@@ -8,9 +8,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="title" content="AEC Library is a comprehensive library management system">
+  <meta name="title" content="niet Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    content="Designed for both large and small library systems, niet Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
   <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
@@ -120,17 +120,15 @@
         <div class="icons">
           <ul>
             <li>
-              <a href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank" title="LinkedIn" rel="noopener" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in icon"></i></a>
+              <a href="https://www.linkedin.com/in/anshsingh7755/" target="_blank" title="LinkedIn" rel="noopener" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in icon"></i></a>
             </li>
             <li>
-              <a href="https://github.com/SauravMukherjee44" target="_blank" title="GitHub" rel="noopener" aria-label="Follow us on GitHub"> <i class="fab fa-github icon"></i> </a>
+              <a href="https://github.com/anshsingh7755" target="_blank" title="GitHub" rel="noopener" aria-label="Follow us on GitHub"> <i class="fab fa-github icon"></i> </a>
             </li>
 	          <li>
-              <a href="https://twitter.com/mesourav44" target="_blank" title="Twitter" rel="noopener" aria-label="Follow us on Twitter"><i class="fab fa-twitter icon"></i></a>
+              <a href="https://twitter.com/singhansh7755" target="_blank" title="Twitter" rel="noopener" aria-label="Follow us on Twitter"><i class="fab fa-twitter icon"></i></a>
             </li>
-            <li>
-              <a href="https://bit.ly/CodeINYouTube" target="_blank" title="YouTube" rel="noopener" aria-label="Follow us on YouTube"><i class="fab fa-youtube icon"></i></a>
-            </li>
+           
           </ul>
         </div>
         <div>
