--- a/blogs.html
+++ b/blogs.html
@@ -13,7 +13,7 @@
   <meta name="language" content="English">
   <meta name="author" content="AEC LIBRARY">
   <link rel="icon" href="./assets/logos/finalLogo.webp" type="image/x-icon" />
-  <title>Blogs | AEC Library</title>
+  <title>Blogs | NIET Library</title>
 
   <!-- Bootstrap CSS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -545,10 +545,7 @@
             <a title="Twitter" target="_blank" href="https://twitter.com/mesourav44/" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i
                 class="fab fa-twitter icon"></i></a>
           </li>
-          <li>
-            <a title="YouTube" target="_blank" href="https://bit.ly/CodeINYouTube" rel="noopener noreferrer" aria-label="Follow us on YouTube"><i
-                class="fab fa-youtube icon"></i></a>
-          </li>
+          
         </ul>
       </div>
       <div>
