--- a/blogs.html
+++ b/blogs.html
@@ -534,15 +534,15 @@
 
         <ul>
           <li>
-            <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/sauravmukherjee44/" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i
+            <a title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/anshsingh7755/" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i
                 class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a title="GitHub" target="_blank" href="https://github.com/SauravMukherjee44/" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i
+            <a title="GitHub" target="_blank" href="https://github.com/anshsingh7755/" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i
                 class="fab fa-github icon"></i> </a>
           </li>
           <li>
-            <a title="Twitter" target="_blank" href="https://twitter.com/mesourav44/" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i
+            <a title="Twitter" target="_blank" href="https://twitter.com/singhansh7755/" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i
                 class="fab fa-twitter icon"></i></a>
           </li>
           
