--- a/public/contact us .html
+++ b/public/contact us .html
@@ -12,7 +12,7 @@
 	<meta name="language" content="English">
 	<meta name="author" content="AEC LIBRARY">
 	<link rel="icon" href="../assets/logos/finalLogo.webp" type="image/x-icon">
-	<title>Contact Us | AEC Library</title>
+	<title>Contact Us | NIET Library</title>
   
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -132,22 +132,20 @@
 
           <ul>
             <li>
-              <a href="https://www.linkedin.com/in/sauravmukherjee44/"><i class="fab fa-linkedin-in icon"></i></a>
+              <a href="https://www.linkedin.com/in/anshsingh7755/"><i class="fab fa-linkedin-in icon"></i></a>
             </li>
             <li>
-              <a href="https://github.com/SauravMukherjee44" target="github"> <i class="fab fa-github icon"></i> </a>
+              <a href="https://github.com/anshsingh7755" target="github"> <i class="fab fa-github icon"></i> </a>
             </li>
 	    <li>
-              <a href="https://twitter.com/mesourav44"><i class="fab fa-twitter icon"></i></a>
+              <a href="https://twitter.com/singhansh7755"><i class="fab fa-twitter icon"></i></a>
             </li>
-            <li>
-              <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw"><i class="fab fa-youtube icon"></i></a>
-            </li>
+            
           </ul>
         </div>
         <div>
 
-          <p>©2021 Copyright AEC Library</p>
+          <p>©2021 Copyright NIET Library</p>
         </div>
 
     </footer>
