--- a/public/donate-book.html
+++ b/public/donate-book.html
@@ -9,7 +9,7 @@
   <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
 
   <!-- Bootstrap v4.3 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -172,21 +172,19 @@ tr:nth-child(even) {background-color: #f2f2f2;}
       <div class="icons">
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank" title="LinkedIn" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in icon"></i></a>
+            <a href="https://www.linkedin.com/in/anshsingh7755/" target="_blank" title="LinkedIn" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a href="https://github.com/SauravMukherjee44" target="_blank" title="GitHub" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i class="fab fa-github icon"></i> </a>
+            <a href="https://github.com/anshsingh7755" target="_blank" title="GitHub" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i class="fab fa-github icon"></i> </a>
           </li>
           <li>
-            <a href="https://twitter.com/mesourav44" target="_blank" title="Twitter" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i class="fab fa-twitter icon"></i></a>
+            <a href="https://twitter.com/singhansh7755" target="_blank" title="Twitter" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i class="fab fa-twitter icon"></i></a>
           </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw" target="_blank" title="YouTube" rel="noopener noreferrer" aria-label="Follow us on YouTube"><i class="fab fa-youtube icon"></i></a>
-          </li>
+         
         </ul>
       </div>
       <div>
-        <p>©2023 Copyright AEC Library</p>
+        <p>©2023 Copyright NIET Library</p>
       </div>
       <div>
         <p>
