--- a/public/faq.html
+++ b/public/faq.html
@@ -13,7 +13,7 @@
   <meta name="author" content="AEC LIBRARY">
 
   <link rel="icon" href="./../assets/logos/finalLogo.webp" type="image/x-icon" />
-  <title>FAQ | AEC Library</title>
+  <title>FAQ | NIET Library</title>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -152,7 +152,7 @@
       <div class="faq-body">
         <p>
             Contribute to Aec-library :
-            Aec-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
+            Niet-library is a community initiative to build a robust book catalog. Anyone can add or edit data about books
             and blogs.</p><br>
         <p>
             Personalize your experience :
@@ -217,21 +217,19 @@
       <div class="icons">
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/sauravmukherjee44/"><i class="fab fa-linkedin-in icon"></i></a>
+            <a href="https://www.linkedin.com/in/anshsingh7755/"><i class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a href="https://github.com/SauravMukherjee44" target="github"> <i class="fab fa-github icon"></i> </a>
+            <a href="https://github.com/anshsingh7755" target="github"> <i class="fab fa-github icon"></i> </a>
           </li>
           <li>
-            <a href="https://twitter.com/mesourav44"><i class="fab fa-twitter icon"></i></a>
+            <a href="https://twitter.com/singhansh7755"><i class="fab fa-twitter icon"></i></a>
           </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw"><i class="fab fa-youtube icon"></i></a>
-          </li>
+        
         </ul>
       </div>
       <div>
-        <p>©2023 Copyright AEC Library</p>
+        <p>©2023 Copyright  NIET Library</p>
       </div>
     </div>
   </footer>
