--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
         comprehensive library management system. For managing circulation
         and stock, this is ideal for institutional, public, and digital
         libraries. In order to manage and automate the processing of even
-        the largest of libraries, the AEC Library website was developed.
+        the largest of libraries, the NIET Library website was developed.
         According to the end user's requirements, the website is capable of
         managing Book Issues, Returns, and generating various Reports for
         Record-Keeping and Review purposes.
@@ -133,7 +133,7 @@
         <strong>Why use NIET Library?</strong>
       </h2>
       <p>
-        Through AEC Library, the distribution process is controlled and
+        Through NIET Library, the distribution process is controlled and
         centralized, reducing the risk of loss of books, over-ordering, and
         expensive replacements. The AEC Library gives easy-to-understand
         information on each form of the system, as well as description of each
@@ -145,7 +145,7 @@
     </div>
     <div class="first">
       <h2 class="text-white">
-        <strong>Features of AEC Library?</strong>
+        <strong>Features of NIET Library?</strong>
       </h2>
       <p>
         <i class="far fa-hand-point-right"></i> Store various types of books, journals, newspapers, magazines,
@@ -215,22 +215,20 @@
       <div class="icons">
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/sauravmukherjee44/" title="LinkedIn" target="_blank" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i class="fab fa-lg fa-linkedin-in icon"></i></a>
+            <a href="https://www.linkedin.com/in/anshsingh7755/" title="LinkedIn" target="_blank" rel="noopener noreferrer" aria-label="Follow us on LinkedIn"><i class="fab fa-lg fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a href="https://github.com/SauravMukherjee44" title="GitHub" target="_blank" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i class="fab fa-lg fa-github icon"></i>
+            <a href="https://github.com/anshsingh7755" title="GitHub" target="_blank" rel="noopener noreferrer" aria-label="Follow us on GitHub"> <i class="fab fa-lg fa-github icon"></i>
             </a>
           </li>
           <li>
-            <a href="https://twitter.com/mesourav44" title="Twitter" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i class="fab fa-lg fa-twitter icon"></i></a>
+            <a href="https://twitter.com/singhansh7755" title="Twitter" target="_blank" rel="noopener noreferrer" aria-label="Follow us on Twitter"><i class="fab fa-lg fa-twitter icon"></i></a>
           </li>
-          <li>
-            <a href="https://bit.ly/CodeINYouTube" title="YouTube" target="_blank" rel="noopener noreferrer" aria-label="Follow us on YouTube"><i class="fab fa-lg fa-youtube icon"></i></a>
-          </li>
+         
         </ul>
       </div>
       <div>
-        <p style="color: rgb(204, 204, 204);">&#169 <span id="footer-year"></span> Copyright AEC Library</p>
+        <p style="color: rgb(204, 204, 204);">&#169 <span id="footer-year"></span> Copyright NIET Library</p>
       </div>
     </footer>
 
