--- a/resource.html
+++ b/resource.html
@@ -9,11 +9,11 @@
 
     <meta name="title" content="NIET Library is a comprehensive library management system">
     <meta name="description"
-        content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+        content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
     <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="AEC LIBRARY">
+    <meta name="author" content="NIET LIBRARY">
 
     <style media="screen">
         .carousel-cell {
@@ -1390,7 +1390,7 @@
                 </div>
                 <div class="bottom">
                     <p>Copyright © <span id="footer-year"></span> <a
-                            href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ AEC Library
+                            href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ NIET Library
                         </a> All rights reserved</p>
                 </div>
             </div>
