--- a/ncert.html
+++ b/ncert.html
@@ -227,7 +227,7 @@
     
 </main>
     <footer>
-        <p>Copyright © <span id="footer-year"></span> <a href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ AEC Library
+        <p>Copyright © <span id="footer-year"></span> <a href="https://github.com/anshsingh7755/College-Library-Website"> @ NIET Library
         </a> All rights reserved</p>
     </footer>
     <!-- Footer Year Calculator -->
