--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
       <li class="heading">Contact:</li>
 
       <li><a href="tel:95768xyza">Ph:95768xyza</a></li>
-      <li><a href="mailto:hello@acelibrary.com" target="_blank">E:hello@acelibrary.com</a></li>
+      <li><a href="mailto:hello@nietlibrary.com" target="_blank">E:hello@nietlibrary.com</a></li>
       <li><a href="https://www.linkedin.com/in/sauravmukherjee44/" target="_blank"> Linkedin</a></li>
 
 
