--- a/contributors.html
+++ b/contributors.html
@@ -10,11 +10,11 @@
 
   <meta name="title" content="niet Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, niet Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+    content="Designed for both large and small library systems, niet Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+  <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -36,7 +36,7 @@
 <body>
   <header>
   <nav class="navbar navbar-expand-lg navbar-light bg-info align-items-center">
-    <a class="navbar-brand ml-4" href="index.html"><img src="assets/logos/finalLogo.webp" alt="AEC Library" class="logo-img"></a>
+    <a class="navbar-brand ml-4" href="index.html"><img src="assets/logos/finalLogo.webp" alt="NIET Library" class="logo-img"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -133,7 +133,7 @@
         </div>
         <div>
 
-          <p style="color: cornsilk;margin-bottom: 4px;">&#169 <span id="footer-year"></span> Copyright&nbsp;<a href="https://github.com/SauravMukherjee44/Aec-Library-Website">@AEC Library</a></p>
+          <p style="color: cornsilk;margin-bottom: 4px;">&#169 <span id="footer-year"></span> Copyright&nbsp;<a href="https://github.com/SauravMukherjee44/Aec-Library-Website">@NIET Library</a></p>
         </div>
         </div>
     </footer>
