--- a/cbse_notes.html
+++ b/cbse_notes.html
@@ -340,7 +340,7 @@
     </section>
 
     <footer>
-        <p>Copyright © <span id="footer-year"></span> <a href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ AEC Library
+        <p>Copyright © <span id="footer-year"></span> <a href="https://github.com/SauravMukherjee44/Aec-Library-Website"> @ NIET Library
         </a> All rights reserved</p>
     </footer>
     <!-- Footer Year Calculator -->
