--- a/blogs.html
+++ b/blogs.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="AEC Library is a comprehensive library management system">
+  <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
   <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
   <link rel="icon" href="./assets/logos/finalLogo.webp" type="image/x-icon" />
   <title>Blogs | NIET Library</title>
 
@@ -56,7 +56,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><img src="assets/logos/finalLogo.webp" alt="AEC Library"
+      <a class="navbar-brand" href="index.html"><img src="assets/logos/finalLogo.webp" alt="NIET Library"
           class="logo-img" /></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -550,7 +550,7 @@
       </div>
       <div>
 
-        <p>©<span id="footer-year"></span> Copyright AEC Library</p>
+        <p>©<span id="footer-year"></span> Copyright NIET Library</p>
       </div>
     </div>
   </footer>
