--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@
   <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
     content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+  <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="author" content="NIET LIBRARY">
