--- a/about.html
+++ b/about.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+  <meta name="keywords" content= NIET, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
   <meta name="author" content="NIET LIBRARY">
@@ -59,7 +59,7 @@
   <!-- Navbar started -->
 <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand" href="index.html"><img src="assets/logos/finalLogo.webp" alt="AEC Library"
+    <a class="navbar-brand" href="index.html"><img src="assets/logos/finalLogo.webp" alt= NIET Library"
         class="logo-img" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,9 +135,9 @@
       <p>
         Through NIET Library, the distribution process is controlled and
         centralized, reducing the risk of loss of books, over-ordering, and
-        expensive replacements. The AEC Library gives easy-to-understand
+        expensive replacements. The NIET Library gives easy-to-understand
         information on each form of the system, as well as description of each
-        field on the form. In addition to being easy to use, AEC Library can
+        field on the form. In addition to being easy to use, NIET Library can
         generate instant reports with ease. The software has been designed
         to be flexible and user-friendly for librarians and media
         specialists.
