--- a/public/contact us .html
+++ b/public/contact us .html
@@ -5,12 +5,12 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<meta name="title" content="AEC Library is a comprehensive library management system">
-	<meta name="description" content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+	<meta name="title" content="NIET Library is a comprehensive library management system">
+	<meta name="description" content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
 	<meta name="keywords" content="AEC, library systems, library, digital libraries, books">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="language" content="English">
-	<meta name="author" content="AEC LIBRARY">
+	<meta name="author" content="NIET LIBRARY">
 	<link rel="icon" href="../assets/logos/finalLogo.webp" type="image/x-icon">
 	<title>Contact Us | NIET Library</title>
   
@@ -36,7 +36,7 @@
 
 	<!-- Navbar started -->
 	<nav class="navbar navbar-expand-lg navbar-light bg-info align-items-center">
-		  <a class="navbar-brand ml-4" href="#"><img src="../assets/logos/finalLogo.webp" alt="AEC Library" class="logo-img"></a>
+		  <a class="navbar-brand ml-4" href="#"><img src="../assets/logos/finalLogo.webp" alt="NIET Library" class="logo-img"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 		aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		<span class="navbar-toggler-icon"></span>
@@ -61,7 +61,7 @@
 		<div class="contact-info">
 		   <div>
 			   <h2><strong>Contact Info</strong></h2>
-			   <h4>AEC Library</h4>
+			   <h4>NIET Library</h4>
 	
 			   <ul class="info">
 				   <li>
@@ -145,7 +145,7 @@
         </div>
         <div>
 
-          <p>©2021 Copyright NIET Library</p>
+          <p>©2024 Copyright NIET Library</p>
         </div>
 
     </footer>
