Update contact us .html

--- a/public/contact us .html
+++ b/public/contact us .html
@@ -145,7 +145,7 @@
         </div>
         <div>
 
-          <p>©2024 Copyright NIET Library</p>
+          <p>©2024 Copyright COLLEGE Library</p>
         </div>
 
     </footer>
