--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="#f2f2f2">
   <meta name="og:title" content="NIET Library is a comprehensive library management system">
   <meta name="og:description"
-    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
 
   <meta property="og:image" content="assets/logos/finalLogo.webp">
   <meta name="og:type" content="library">
@@ -22,7 +22,7 @@
 
   <meta name="title" content="NIET Library is a comprehensive library management system">
   <meta name="description"
-    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
   <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <!-- <meta http-equiv="Content-Type" content="text/html" charset="utf-8"> -->
   <meta name="language" content="English">
@@ -815,7 +815,7 @@
     <h1 class="faq-heading">FAQ'S</h1>
     <div class="faq-one" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What is AEC Library?</h3>
+      <h3 class="faq-page">Q: What is NIET Library?</h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>This is an Open-Source Library Website that contains a <a class="faq-link" href="resource.html"><span class="faq-link-inner">Resources</span> section</a> to learn different topics, <a class="faq-link" href="./public/donate-book.html"><span class="faq-link-inner">Donate book</span> section</a> to donate your old books, and a <a class="faq-link" href = "#table"><span class="faq-link-inner">Book issue</span> section </a>to keep a record of all the books issued. </p>
@@ -837,7 +837,7 @@
       <h3 class="faq-page">Q: How to become a member? </h3>
       <!-- faq answer -->
       <div class="faq-body">
-        <p>By donating any book of your choice, you can become a member of the AEC Library.</p>
+        <p>By donating any book of your choice, you can become a member of the NIET Library.</p>
       </div>
     </div>
     <div class="faq-four" data-aos="fade">
@@ -1063,7 +1063,7 @@
         </div>
         <div>
 
-          <p>©<span id="footer-year"></span> Copyright AEC Library</p>
+          <p>©<span id="footer-year"></span> Copyright NIET Library</p>
         </div>
         <!--
         <div class="ml-auto">
