--- a/public/faq.html
+++ b/public/faq.html
@@ -5,12 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="title" content="AEC Library is a comprehensive library management system">
-  <meta name="description" content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+  <meta name="title" content="NIET Library is a comprehensive library management system">
+  <meta name="description" content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+  <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
 
   <link rel="icon" href="./../assets/logos/finalLogo.webp" type="image/x-icon" />
   <title>FAQ | NIET Library</title>
@@ -35,7 +35,7 @@
   
   <!-- Navbar started -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand ml-4" href="./../index.html"><img src="./../assets/logos/finalLogo.webp" alt="AEC Library"
+    <a class="navbar-brand ml-4" href="./../index.html"><img src="./../assets/logos/finalLogo.webp" alt="NIET Library"
         class="logo-img" /></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -87,7 +87,7 @@
     <h1 class="faq-heading">FAQ'S</h1>
     <div class="faq-one" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What is AEC Library?</h3>
+      <h3 class="faq-page">Q: What is NIET Library?</h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>This is an Open-Source Library Website that contains a <a class="faq-link" href="resource.html" target="_blank"><span class="faq-link-inner">Resources</span> section</a> to learn different topics, <a class="faq-link" href="./public/donate-book.html" target="_blank"><span class="faq-link-inner">Donate book</span> section</a> to donate your old books, and a <a class="faq-link" href = "#table"><span class="faq-link-inner">Book issue</span> section </a>to keep a record of all the books issued. </p>
@@ -95,7 +95,7 @@
     </div>
     <div class="faq-two" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What is the best part of AEC Library?</h3>
+      <h3 class="faq-page">Q: What is the best part of NIET Library?</h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>The best part about the website is that you can also contribute to the website for others to use the
@@ -107,7 +107,7 @@
       <h3 class="faq-page">Q: How to become a member? </h3>
       <!-- faq answer -->
       <div class="faq-body">
-        <p>By donating any book of your choice, you can become a member of the AEC Library.</p>
+        <p>By donating any book of your choice, you can become a member of the NIET Library.</p>
       </div>
     </div>
     <div class="faq-four" data-aos="fade">
