--- a/public/getabook.html
+++ b/public/getabook.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="title" content="AEC Library is a comprehensive library management system">
-  <meta name="description" content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-  <meta name="keywords" content="AEC, library systems, library, digital libraries, books">
+  <meta name="title" content="NIET Library is a comprehensive library management system">
+  <meta name="description" content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+  <meta name="keywords" content="NIET, library systems, library, digital libraries, books">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="language" content="English">
-  <meta name="author" content="AEC LIBRARY">
+  <meta name="author" content="NIET LIBRARY">
 
   <!-- Bootstrap v4.3 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -44,7 +44,7 @@ tr:nth-child(even) {background-color: #f2f2f2;}
   <div id="particles-js"></div>
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-info">
-    <a class="navbar-brand ml-4" href="../index.html"><img src="../assets/logos/finalLogo.webp" alt="AEC Library"
+    <a class="navbar-brand ml-4" href="../index.html"><img src="../assets/logos/finalLogo.webp" alt="NIET Library"
         class="logo-img"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -119,21 +119,19 @@ tr:nth-child(even) {background-color: #f2f2f2;}
       <div class="icons">
         <ul>
           <li>
-            <a href="https://www.linkedin.com/in/sauravmukherjee44/"><i class="fab fa-linkedin-in icon"></i></a>
+            <a href="https://www.linkedin.com/in/anshsingh7755/"><i class="fab fa-linkedin-in icon"></i></a>
           </li>
           <li>
-            <a href="https://github.com/SauravMukherjee44" target="github"> <i class="fab fa-github icon"></i> </a>
+            <a href="https://github.com/anshsingh7755" target="github"> <i class="fab fa-github icon"></i> </a>
           </li>
           <li>
-            <a href="https://twitter.com/mesourav44"><i class="fab fa-twitter icon"></i></a>
+            <a href="https://twitter.com/singhansh7755"><i class="fab fa-twitter icon"></i></a>
           </li>
-          <li>
-            <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw"><i class="fab fa-youtube icon"></i></a>
-          </li>
+         
         </ul>
       </div>
       <div>
-        <p>©2021 Copyright AEC Library</p>
+        <p>©2021 Copyright NIET Library</p>
       </div>
       <div>
         <p>
