--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="AEC Library is a comprehensive library management system">
+    <meta name="title" content="NIET Library is a comprehensive library management system">
     <meta name="description"
-        content="Designed for both large and small library systems, AEC Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the AEC Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
-    <meta name="keywords" content="AEC Library, library systems, library, digital libraries, books">
+        content="Designed for both large and small library systems, NIET Library is a comprehensive library management system. For managing circulation and stock, this is ideal for institutional, public, and digital libraries. In order to manage and automate the processing of even the largest of libraries, the NIET Library website was developed. According to the end user's requirements, the website is capable of managing Book Issues, Returns, and generating various Reports for Record-Keeping and Review purposes.">
+    <meta name="keywords" content="NIET Library, library systems, library, digital libraries, books">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="language" content="English">
-    <meta name="author" content="AEC LIBRARY">
+    <meta name="author" content="NIET LIBRARY">
 
     <link rel="icon" href="./../assets/logos/finalLogo.webp" type="image/x-icon" />
-    <title>Privacy Policy | AEC Library</title>
+    <title>Privacy Policy | NIET Library</title>
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -37,7 +37,7 @@
 
     <!-- Navbar started -->
     <nav class="navbar navbar-expand-lg navbar-light bg-info align-items-center">
-        <a class="navbar-brand ml-4" href="#"><img src="../assets/logos/finalLogo.webp" alt="AEC Library"
+        <a class="navbar-brand ml-4" href="#"><img src="../assets/logos/finalLogo.webp" alt="NIET Library"
                 class="logo-img"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,7 +70,7 @@
             <h1 class="text-center">Privacy Policy</h1>
 
             <p>
-                We built "AEC Library" as a free open-source website. This Service is provided at no cost and is
+                We built "NIET Library" as a free open-source website. This Service is provided at no cost and is
                 intended
                 for use as is.
             </p>
@@ -80,7 +80,7 @@
                 use or share your information with anyone
                 except as described in this Privacy Policy.
                 The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is
-                accessible at "AEC Library" unless otherwise defined in this Privacy Policy.
+                accessible at "NIET Library" unless otherwise defined in this Privacy Policy.
 
             </p>
         </div>
@@ -211,8 +211,8 @@
             <p>
                 If you have any questions or suggestions about the Privacy Policy, do not
                 hesitate to contact us by
-                <a href="mailto: contact@aeclibrary.com">email.</a> 
-                <!-- email: contact@aeclibrary.com -->
+                <a href="mailto: contact@nietlibrary.com">email.</a> 
+                <!-- email: contact@nietlibrary.com -->
             </p>
         </div>
     </div>
@@ -225,24 +225,21 @@
                 <div class="icons">
                     <ul>
                         <li>
-                            <a href="https://www.linkedin.com/in/sauravmukherjee44/"><i
+                            <a href="https://www.linkedin.com/in/anshsingh7755/"><i
                                     class="fab fa-linkedin-in icon"></i></a>
                         </li>
                         <li>
-                            <a href="https://github.com/SauravMukherjee44" target="github"> <i
+                            <a href="https://github.com/anshsingh7755" target="github"> <i
                                     class="fab fa-github icon"></i> </a>
                         </li>
                         <li>
-                            <a href="https://twitter.com/mesourav44"><i class="fab fa-twitter icon"></i></a>
+                            <a href="https://twitter.com/singhansh7755"><i class="fab fa-twitter icon"></i></a>
                         </li>
-                        <li>
-                            <a href="https://www.youtube.com/channel/UCYGVtIgQIAChKBWBmChxzJw"><i
-                                    class="fab fa-youtube icon"></i></a>
-                        </li>
+                       
                     </ul>
                 </div>
                 <div>
-                    <p>©2021 Copyright AEC Library</p>
+                    <p>©2021 Copyright NIET Library</p>
                 </div>
         </footer>
     </div>
