--- a/public/faq.html
+++ b/public/faq.html
@@ -147,7 +147,7 @@
     </div>
     <div class="faq-five" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What are the benefits of an account in Niet-Library? </h3>
+      <h3 class="faq-page">Q: What are the benefits of an account in NIET-Library? </h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>
