--- a/public/faq.html
+++ b/public/faq.html
@@ -87,7 +87,7 @@
     <h1 class="faq-heading">FAQ'S</h1>
     <div class="faq-one" data-aos="fade">
       <!-- faq question -->
-      <h3 class="faq-page">Q: What is Library?</h3>
+      <h3 class="faq-page">Q: What is NIET Library?</h3>
       <!-- faq answer -->
       <div class="faq-body">
         <p>This is an Open-Source Library Website that contains a <a class="faq-link" href="resource.html" target="_blank"><span class="faq-link-inner">Resources</span> section</a> to learn different topics, <a class="faq-link" href="./public/donate-book.html" target="_blank"><span class="faq-link-inner">Donate book</span> section</a> to donate your old books, and a <a class="faq-link" href = "#table"><span class="faq-link-inner">Book issue</span> section </a>to keep a record of all the books issued. </p>
