--- a/Login_page/login_page.html
+++ b/Login_page/login_page.html
@@ -7,14 +7,14 @@
   <link rel="icon" href="../assets/logos/finalLogo.webp" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <title>LOGIN - AEC Library</title>
+  <title>LOGIN - NIET Library</title>
 </head>
 
 <body>
   <h1 id="err"></h1>
   <div class="section">
     <div class="header">
-      AEC Library - Login
+      NIET Library - Login
     </div>
     <p id="errormsg"></p>
     <form class="login_form" id="form" aria-label="Login form">
